--- a/www/index.html
+++ b/www/index.html
@@ -307,7 +307,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     var db = firebase.firestore();
-
+    var User;
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
         // User is signed in.
@@ -319,7 +319,9 @@
         var uid = user.uid;
         var providerData = user.providerData;
         console.log(uid);
+        User = user;
         loadSchoolChats();
+        loadSubscribedChats();
         //self.app.views.main.router.navigate('/home/', {
         //  reloadCurrent: true
         //});
@@ -385,14 +387,14 @@
 
     //firestore stuff (chat things)
     function loadSchoolChats() {
-
-      ////TODO add the users school here
-      db.collection("school").doc("school of ross").collection("chats").get().then(function(querySnapshot) {
-        querySnapshot.forEach(function(doc) {
-          //this loop runs once for every chat room in the school
-          var ls = document.getElementById("school-group-chats");
-          var li = document.createElement('li')
-          li.innerHTML = '<a href="#" class="item-link item-content">\
+      //TODO clear the currently loaded chats if there are any
+      db.collection("users").doc(User.uid).get().then(function(user) {
+        db.collection("school").doc(user.get("school")).collection("chats").get().then(function(querySnapshot) {
+          querySnapshot.forEach(function(doc) {
+            //this loop runs once for every chat room in the school
+            var ls = document.getElementById("school-group-chats");
+            var li = document.createElement('li')
+            li.innerHTML = '<a href="#" class="item-link item-content">\
             <div class="item-inner">\
               <div class="item-title-row">\
                 <div class="item-title">' + doc.get("name") + '</div>\
@@ -401,32 +403,49 @@
               <div class="item-text">' + doc.get("description") + '</div>\
             </div>\
           </a>';
-          ls.appendChild(li);
+            ls.appendChild(li);
 
-          var skeleton = document.getElementById('school-group-chats-skeleton');
-          skeleton.remove();
+            var skeleton = document.getElementById('school-group-chats-skeleton');
+            skeleton.remove();
 
-          //if any of these dont exist in the database they return null or undefined
+            //if any of these dont exist in the database they return null or undefined
+          });
         });
       });
     }
 
+    function loadSubscribedChats() {
+
+      console.log("userid:" + User.uid);
+      db.collection("users").doc(User.uid).collection("chats").get().then(function(querySnapshot) {
+          querySnapshot.forEach(function(doc) {
+              //this loop runs once for every chat room the current user is subbscribed to
+              console.log(doc.id); //this is the name of the chat
+              console.log(doc.get("school"); //this is the school that the chat is associated with
 
 
-    function addMessage() {
-      db.collection("messages").add({
-          name: firebase.auth().currentUser.uid,
-          profilePicUrl: "https://lh4.googleusercontent.com/-bDz3d4hCLzA/AAAAAAAAAAI/AAAAAAAAAEk/xwohCLOzw7c/photo.jpg",
-          text: document.getElementById("messagebar").value,
-          timestamp: firebase.firestore.FieldValue.serverTimestamp()
-        })
-        .then(function(docRef) {
-          console.log("Document written with ID: ", docRef.id);
-        })
-        .catch(function(error) {
-          console.error("Error adding document: ", error);
-        });
-    }
+                //if any of these dont exist in the database they return null or undefined
+              });
+          });
+
+      }
+
+
+
+      function addMessage() {
+        db.collection("messages").add({
+            name: firebase.auth().currentUser.uid,
+            profilePicUrl: "https://lh4.googleusercontent.com/-bDz3d4hCLzA/AAAAAAAAAAI/AAAAAAAAAEk/xwohCLOzw7c/photo.jpg",
+            text: document.getElementById("messagebar").value,
+            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+          })
+          .then(function(docRef) {
+            console.log("Document written with ID: ", docRef.id);
+          })
+          .catch(function(error) {
+            console.error("Error adding document: ", error);
+          });
+      }
   </script>
 </body>
 
